<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:orientation="vertical"
    tools:context=".V_Commerce_subcategory">

    <include layout="@layout/toolbar_subcategory" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/View_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <customfonts.TextViewSFProDisplaySemibold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="12.7dp"
            android:text="@string/filter_by"
            android:textColor="@color/black"
            android:textSize="13.3sp"
            android:textStyle="bold" />

        <!--Price Recycelerview-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="14.3dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginTop="17.3dp"
            android:background="#e3e3e3" />

        <customfonts.TextViewSFProDisplayMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="23.3dp"
            android:text="@string/go_by_brands"
            android:textColor="@color/black"
            android:textSize="13.3sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="53.7dp"
            android:layout_marginLeft="16.3dp"
            android:layout_marginRight="16.3dp"
            android:layout_marginTop="20.3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/man"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image1"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/man"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image2"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/man"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image3"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/man"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/man"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/mens_wear"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/girl"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/womens_wear"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_imag2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ring"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/jewell"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/sports"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/sports"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/bag"
                    app:civ_border_color="@color/circular_pic_border"
                    app:civ_border_width="0.7dp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/bags"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
                <!--android:id="@+id/profile_image5"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:src="@drawable/girl"-->
                <!--android:layout_gravity="center"-->
                <!--app:civ_border_width="2dp"-->
                <!--app:civ_border_color="#5f707070"/>-->

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Womens Wear"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:textSize="12dp"-->
                <!--android:textColor="@color/black"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginTop="10dp"/>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
                <!--android:id="@+id/profile_imag6"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:src="@drawable/ring"-->
                <!--android:layout_gravity="center"-->
                <!--app:civ_border_width="2dp"-->
                <!--app:civ_border_color="#5f707070"/>-->

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Jewellery"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:textSize="12dp"-->
                <!--android:textColor="@color/black"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginTop="10dp"/>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
                <!--android:id="@+id/profile_image7"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:src="@drawable/sports"-->
                <!--android:layout_gravity="center"-->
                <!--app:civ_border_width="2dp"-->
                <!--app:civ_border_color="#5f707070"/>-->

                <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Sports"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:textSize="12dp"-->
                <!--android:textColor="@color/black"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:layout_marginTop="10dp"/>-->

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>